--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>Js Practices</title>
 </head>
 <body>
-    <script src="Multiplication.js">
+    <script src="FavoriteMovies.js">
         console.log("Hello");
     </script>
 </body>
